# bpm

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_projects_and_process_project_id.py  002_add_project_list_columns.py  003_add_project_fields_schema.py  004_add_document_number.py  005_add_project_validators_schema.py
backend/src/: __init__.py  cli.py  config.py  database.py  main.py
backend/src/access_config/: __init__.py
backend/src/catalogs/: __init__.py
backend/src/catalogs/domain/: __init__.py  catalog.py
backend/src/catalogs/infrastructure/: __init__.py  api.py  models.py  repository.py
backend/src/form_builder/: __init__.py
backend/src/form_builder/application/: form_service.py
backend/src/form_builder/domain/: __init__.py  form_definition.py
backend/src/form_builder/infrastructure/: __init__.py  api.py  models.py  repository.py
backend/src/identity/application/: auth_service.py
backend/src/identity/domain/: role.py  user.py
backend/src/identity/infrastructure/: __init__.py  api.py  deps.py  models.py  repository.py
backend/src/process_design/: __init__.py
backend/src/process_design/application/: __init__.py  process_service.py
backend/src/process_design/domain/: __init__.py  process_definition.py
backend/src/projects/domain/: __init__.py  (+1 more)
backend/src/rules/: __init__.py  evaluator.py  validator_runner.py
backend/src/runtime/: __init__.py
backend/tests/: test_evaluator.py
(+77 files in other folders)
